# receipt-to-excel

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  requirements.txt
.claude/: settings.local.json
.github/workflows/: ci.yml
app/: main.py
app/api/: deps.py
app/api/routes/: auth.py  autocomplete.py  dashboard.py  health.py  jobs.py  sessions.py  templates.py
app/core/: auth.py  config.py  errors.py  job_manager.py  logging.py  security.py
app/db/: models.py  session.py
app/db/migrations/: env.py
app/db/repositories/: __init__.py  card_meta_repo.py  expense_record_repo.py  generated_artifact_repo.py  merchant_repo.py  project_repo.py  session_repo.py  team_group_repo.py  template_repo.py  transaction_repo.py  user_repo.py  vendor_repo.py
app/domain/: __init__.py  attendee.py  card.py  confidence.py  expense_record.py  parsed_transaction.py  project.py  template_map.py  user.py  vendor.py
app/schemas/: auth.py  autocomplete.py  job.py  receipt.py  session.py  template.py
app/services/: batch_processor.py  docling_service.py  excel_mapper.py  ollama_client.py  pdf_merger.py  template_store.py
app/services/extraction/: confidence_labeler.py
app/services/generators/: layout_pdf.py  merged_pdf.py  xlsx_writer.py  zip_bundler.py
app/services/jobs/: event_bus.py  runner.py
app/services/matchers/: transaction_matcher.py
app/services/parsers/: base.py  pdf_text_probe.py  router.py
app/services/preprocessor/: __init__.py  image.py  pdf.py  presentation.py  spreadsheet.py
app/services/resolvers/: __init__.py  card_type.py  category_classifier.py  note_generator.py  vendor_matcher.py
app/services/stats/: baseline.py  timing.py
app/services/storage/: file_manager.py
app/services/templates/: analyzer.py  grid_io.py  injector.py
config/: category_rules.json  meal_type_rules.json
docs/architecture/: README.md  current.md  planned.md
docs/decisions/: ADR-001-mypy-disallow-any-explicit-removed.md  ADR-002-ollama-model-selection.md  ADR-003-real-fixture-naming.md  ADR-004-woori-nup-layout-analysis.md  ADR-005-parser-returns-list.md  ADR-006-expense-template-analysis.md  ADR-007-text-aware-provider-detection.md  ADR-008-rule-based-regex-tuning.md  ADR-010-ui-example-analysis.md  ADR-011-template-analyzer-suffix-free.md  ADR-012-frontend-stack-and-design-tokens.md  ADR-013-frontend-implementation-notes.md
docs/limitations/: ocr_qwen_vendor_name.md
docs/plan/: HANDOFF.md  phase-1-done.md  phase-2-done.md  phase-3-done.md  phase-4-done.md  phase-5-done.md  phase-5-plan.md  phase-6-done.md  phase-6-plan.md  phase-7-done.md  phase-7-plan.md  phase-8-plan.md
docs/superpowers/plans/: 2026-04-28-docling-redesign.md  2026-04-28-phase1-docling.md  2026-04-28-phase1-foundation.md  2026-04-28-phase1-scaffold-upload.md  2026-04-28-phase2-ocr-sse.md  2026-04-28-phase3-template-excel.md  2026-04-28-phase4-pdf-merger.md  2026-04-28-phase5-frontend-ui.md  2026-04-29-master-refactor.md  2026-04-29-phase2-ocr-sse.md  2026-05-02-ocr-vision-hybrid.md  2026-05-15-baseline-per-user-ema.md  2026-05-15-openpyxl-services-refactor.md
docs/superpowers/specs/: 2026-04-28-receipt-to-excel-design.md  2026-05-15-baseline-per-user-ema-design.md  2026-05-15-openpyxl-services-refactor-design.md
scripts/: make_sample_receipts.py  make_sample_template.py
static/: app.js  index.html  style.css  templates.js
tests/: conftest.py  test_batch_processor.py  test_docling_service.py  test_excel_mapper.py  test_job_manager.py  test_ollama_client.py  test_pdf_merger.py  test_preprocessor.py  test_schemas.py  test_template_store.py  test_templates_api.py  test_upload.py
tests/fixtures/: synthetic_card_statements.py  synthetic_pdfs.py  synthetic_xlsx.py
tests/integration/: test_autocomplete_dashboard.py  test_e2e_session_lifecycle.py  test_migrations.py  test_real_template_round_trip.py  test_session_stats_baseline.py  test_sessions_api.py  test_templates_api.py
tests/smoke/: README.md  test_real_pdfs.py
tests/unit/: test_auth.py  test_baseline.py  test_card_statement_parser.py  test_card_type_resolver.py  test_category_classifier.py  test_confidence_labeler.py  test_db_models.py  test_docling_service.py  test_domain_isolation.py  test_domain_parsed_transaction.py  test_errors.py  test_file_manager.py  test_grid_io.py  test_job_event_bus.py  test_job_runner.py  test_kakaobank_postprocessor.py  test_kbank_parser.py  test_llm_parser.py  test_logging.py  test_note_generator.py  test_nup_splitter.py  test_ocr_hybrid_parser.py  test_ocr_sanitize.py  test_other_rule_based_stubs.py  test_parser_router.py  test_pdf_generators.py  test_pdf_text_probe.py  test_repositories.py  test_samsung_parser.py  test_scaffold.py  test_shinhan_parser.py  test_template_analyzer.py  test_template_injector.py  test_template_map.py  test_timing.py  test_transaction_matcher.py  test_upload_guard.py  test_vendor_matcher.py  test_woori_parser.py  test_xlsx_writer.py
ui/: .dockerignore  .env.example  .eslintrc.cjs  .gitignore  Dockerfile  README.md  components.json  index.html  nginx.conf  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
ui/e2e/: _mocks.ts  dashboard.spec.ts  result.spec.ts  templates.spec.ts  upload.spec.ts  verify.spec.ts
ui/src/: App.test.tsx  App.tsx  main.tsx  vite-env.d.ts
ui/src/components/: Autocomplete.test.tsx  Autocomplete.tsx  Button.test.tsx  Button.tsx  Chip.test.tsx  Chip.tsx  ConfidenceBadge.test.tsx  ConfidenceBadge.tsx  Icon.test.tsx  Icon.tsx  PurposeTile.test.tsx  PurposeTile.tsx  StatusPill.test.tsx  StatusPill.tsx  StepIndicator.test.tsx  StepIndicator.tsx  SuggestChip.test.tsx  SuggestChip.tsx  TopNav.test.tsx  TopNav.tsx
ui/src/lib/: auth.ts  cn.ts  config.ts  constants.ts  format.test.ts  format.ts  query.ts  sse.test.ts  sse.ts
ui/src/mocks/: browser.ts  data.ts  handlers.ts
ui/src/pages/: DashboardPage.test.tsx  DashboardPage.tsx  ResultPage.test.tsx  ResultPage.tsx  TemplatesPage.tsx  (+2 more)
(+81 files in other folders)
