[project]
name = "receipt-to-excel"
version = "0.1.0"
description = "Receipt-to-Excel v4 — 한국 카드/계좌 영수증 PDF → 회계 XLSX 자동 변환"
requires-python = ">=3.12,<3.13"
readme = "README.md"
license = { text = "Proprietary" }
authors = [{ name = "bj" }]

dependencies = [
    # fastapi 0.120+ 가 starlette 0.49.x 와 호환 (CVE-2025-62727 패치 포함).
    "fastapi>=0.120,<0.130",
    "starlette>=0.49.1,<0.50",
    "pydantic>=2.9,<3",
    "pydantic-settings>=2.5,<3",
    "python-jose[cryptography]>=3.3,<4",
    "httpx>=0.27,<0.29",
    "structlog>=24.4,<25",
    "uvicorn[standard]>=0.32,<0.40",
    # DB — Phase 2.
    "sqlalchemy[asyncio]>=2.0,<3",
    "aiosqlite>=0.20,<1",
    "alembic>=1.14,<2",
    # 룰 기반 파서 — Phase 4.
    "pdfplumber>=0.11,<1",
    # pdfplumber transitive 의 pillow — CVE-2026-42309/10/11 패치 (12.2 이상) 강제.
    "pillow>=12.2,<13",
    # XLSX 읽기/쓰기 + PDF 병합 — Phase 5 Templates + Generators.
    "openpyxl>=3.1,<4",
    "pypdf>=6.10.2,<7",
    # multipart 업로드 form parsing — Phase 6 Sessions/Templates API.
    "python-multipart>=0.0.20,<1",
]

[project.optional-dependencies]
# OCR/LLM — heavy weights (200MB+). CI 기본 제외. smoke 실행 시만 ``uv sync --extra ocr``.
ocr = [
    "easyocr>=1.7,<2",
    "docling>=2.0,<4",
]

[dependency-groups]
dev = [
    # pytest 9.0.3+ 는 CVE-2025-71176 패치 포함. pytest-asyncio 1.x 호환.
    "pytest>=9.0.3,<10",
    "pytest-asyncio>=1.0,<2",
    "respx>=0.21,<0.22",
    "mypy>=1.13,<2",
    "ruff>=0.7,<0.10",
    "pip-audit>=2.7,<3",
    # 단방향 의존 CI 차단 게이트 — CLAUDE.md "코드 구조". Phase 8.12.
    "import-linter>=2.0,<3",
    # 합성 PDF 생성 (테스트 fixture) — Phase 4.
    "reportlab>=4.2,<5",
]

[tool.uv]
package = false

# -----------------------------------------------------------------------------
# mypy — CLAUDE.md §"가독성": Any 금지, 100% 타입
# -----------------------------------------------------------------------------
[tool.mypy]
python_version = "3.12"
plugins = ["pydantic.mypy"]
strict = true
# disallow_any_explicit 는 pydantic v2 BaseModel 메타클래스와 호환되지 않음 (ADR-001).
# 대신 ruff ANN401 로 함수 시그니처 내 Any 사용을 차단.
disallow_any_generics = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
no_implicit_reexport = true
show_error_codes = true
pretty = true
files = ["app"]

[[tool.mypy.overrides]]
# 외부 라이브러리 stub 미보유분만 한정 완화 (사유: 공식 stub 부재)
module = [
    "jose.*",
    "structlog.*",
    "alembic.*",
    "docling.*",
    "easyocr.*",
    "openpyxl.*",
    "pypdf.*",
    "reportlab.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
# Alembic auto-generated 디렉토리 — alembic 자체가 직접 import 하며 strict 검증 부적합.
module = ["app.db.migrations.*"]
disable_error_code = ["assignment", "attr-defined", "misc"]

# -----------------------------------------------------------------------------
# ruff — CLAUDE.md §"가독성": E,F,W,I,N,B,UP,S,RUF,ASYNC
# -----------------------------------------------------------------------------
[tool.ruff]
target-version = "py312"
line-length = 100
src = ["app", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "B", "UP", "S", "RUF", "ASYNC", "ANN401"]
ignore = [
    "S101",  # assert 허용 (tests/ 한정 사용)
]

[tool.ruff.lint.per-file-ignores]
# 테스트: 더미 시크릿/assert 허용 + 한글 식별자(N802/N806) 허용 — 도메인 사양상 의도.
"tests/**" = ["S101", "S105", "S106", "S311", "N802", "N806"]
"app/db/migrations/**" = ["E501", "N999"]  # alembic auto-gen — 줄 길이 / 모듈명 무시

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# -----------------------------------------------------------------------------
# pytest — CLAUDE.md §"TDD": smoke 분리(real_pdf 마커)
# -----------------------------------------------------------------------------
[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "real_pdf: smoke tests requiring real PDF/JPG fixtures (excluded by default CI)",
]
testpaths = ["tests"]
addopts = ["-q", "--strict-markers", "-m", "not real_pdf"]
# 우리 코드의 DeprecationWarning 은 여전히 에러로 잡되, 외부 라이브러리 내부에서 자기
# deprecated field 에 자기가 접근해 발생하는 경고는 upstream 업데이트로만 해소 가능 — ignore.
filterwarnings = [
    "error::DeprecationWarning",
    "ignore::DeprecationWarning:docling",
    "ignore::DeprecationWarning:docling.*",
    "ignore::DeprecationWarning:pydantic._internal._model_construction",
]

# -----------------------------------------------------------------------------
# import-linter — CLAUDE.md "코드 구조": 단방향 의존 CI 차단 게이트 (Phase 8.12)
# 실 import 그래프 기준 contract (lint-imports 로컬 GREEN 확인 후 커밋).
# 보류: api/domain 의 openpyxl/httpx 금지 contract — templates.py:27 선재 위반
#       (P7~8.8 유입). 게이트 약화 불가하므로 별도 sub-phase 리팩터 후 추가.
# -----------------------------------------------------------------------------
[tool.importlinter]
root_package = "app"

[[tool.importlinter.contracts]]
name = "도메인 순수성 — domain 은 어떤 app 하위 패키지도 import 하지 않음"
type = "forbidden"
source_modules = ["app.domain"]
forbidden_modules = [
    "app.api",
    "app.core",
    "app.db",
    "app.services",
    "app.schemas",
    "app.workers",
]

[[tool.importlinter.contracts]]
name = "단방향 레이어 — api > services > db > core > domain"
type = "layers"
layers = [
    "app.api",
    "app.services",
    "app.db",
    "app.core",
    "app.domain",
]
